unpackaged/objects/IRR_Module__c.object
<CustomObject>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities to be undertaken</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Anticipated__c</fullName>
        <label>Anticipated Project Outcomes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IRR Modules</relationshipLabel>
        <relationshipName>IRR_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IRR Modules</relationshipLabel>
        <relationshipName>IRR_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dean_of_Faculty_Comments__c</fullName>
        <label>Dean of Faculty Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dean_of_Faculty_Decision_Date__c</fullName>
        <label>Dean of Faculty Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dean_of_Faculty_Decision__c</fullName>
        <label>Dean of Faculty Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dean_of_Faculty_Name__c</fullName>
        <label>Dean of Faculty Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Divisional_Director_Comments__c</fullName>
        <label>Divisional Director Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Divisional_Director_Decision_Date__c</fullName>
        <label>Divisional Director Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Divisional_Director_Decision__c</fullName>
        <label>Divisional Director Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divisional_Director_Division__c</fullName>
        <label>Divisional Director  Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divisional_Director_Name__c</fullName>
        <label>Divisional Director Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Supervisor_Comments__c</fullName>
        <label>Faculty Supervisor Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Faculty_Supervisor_Decision_Date__c</fullName>
        <label>Faculty Supervisor Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Supervisor_Decision__c</fullName>
        <label>Faculty Supervisor Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faculty_Supervisor_Division__c</fullName>
        <label>Faculty Supervisor Division</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Humanities</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faculty_Supervisor_Email__c</fullName>
        <label>Faculty Supervisor Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Faculty_Supervisor_Name__c</fullName>
        <label>Faculty Supervisor Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <label>Goals and values to student</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Individual_Partner_Project__c</fullName>
        <label>Are you doing this project individually</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module_Added_By__c</fullName>
        <label>Module Added By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Added_Date__c</fullName>
        <label>Module Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Partner__r.FirstName + &apos; &apos; +  Partner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Residential_College__c</fullName>
        <formula>Partner__r.Residential_College__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Residential College</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IRR Modules (Partner)</relationshipLabel>
        <relationshipName>IRR_Modules_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2MC Independent Reading and Research</fullName>
                </value>
                <value>
                    <fullName>5MC Special Project in Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule of meetings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Vice_Rector_Decision_Date__c</fullName>
        <label>Vice Rector Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vice_Rector_Decision__c</fullName>
        <label>Vice Rector Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vice_Rector_Name__c</fullName>
        <label>Vice Rector Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IRR Module</label>
    <nameField>
        <displayFormat>IRR-{0000000000}</displayFormat>
        <label>IRR Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRR Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>